Fixed joystick ui not working on mobile
+Fixed joystick ui not working on mobile devices

--- a/rpiardubot/controls/virtualjoystick.css
+++ b/rpiardubot/controls/virtualjoystick.css
@@ -9,12 +9,12 @@
 }
 
 body {
-    background-color: #000000;
+    background-color: #eeeeee;
     margin: 0px;
 }
 
 canvas {
-    background-color: #111133;
+    background-color: #eeeeee;
     display: block;
     position: absolute;
 }
@@ -22,5 +22,5 @@ canvas {
 .container {
     width: auto;
     text-align: center;
-    background-color: #ff0000;
+    background-color: #eeeeee;
 }
